--- a/templates/globaluserpage.html
+++ b/templates/globaluserpage.html
@@ -22,13 +22,13 @@
 	  <div class="collapse navbar-collapse" id="navbarText">
 		<ul class="navbar-nav mr-auto">
 		 <li class="nav-item">
-			<a class="nav-link" href="home.html">Home</a>
-		  </li>
-		  <li class="nav-item">
-			<a class="nav-link" href="team_stats.html">Season Stats <span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="/">Home</a>
 		  </li>
 		  <li class="nav-item active">
-			<a class="nav-link" href="player_info.html">Player Information</a>
+			<a class="nav-link" href="/usersall">High Scores<span class="sr-only">(current)</span></a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="/login">Login Page</a>
 		  </li>
 		</ul>
 		<div class="form-inline my-2 my-lg-0">
