--- a/templates/login.html
+++ b/templates/login.html
@@ -60,6 +60,24 @@
                                     <input type="text" id="email_address" class="form-control" name="email" required autofocus>
                                 </div>
                             </div>
+                            <div class="form-group row">
+                                <label for="first_name" class="col-md-4 col-form-label text-md-right">First Name</label>
+                                <div class="col-md-6">
+                                    <input type="text" id="first_name" class="form-control" name="firstname" required autofocus>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="last_name" class="col-md-4 col-form-label text-md-right">Last Name</label>
+                                <div class="col-md-6">
+                                    <input type="text" id="last_name" class="form-control" name="lastname" required autofocus>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="user_name" class="col-md-4 col-form-label text-md-right">Username</label>
+                                <div class="col-md-6">
+                                    <input type="text" id="user_name" class="form-control" name="username" required autofocus>
+                                </div>
+                            </div>
 
                             <div class="form-group row">
                                 <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
