--- a/templates/globaluserpage.html
+++ b/templates/globaluserpage.html
@@ -8,7 +8,7 @@
     <title>2018 Player Info</title>
 	<link rel='icon' href='../resources/img/favicon.ico' type='image/x-icon'/>
     <!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">  
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link href="../resources/css/my_style.css" rel="stylesheet">
   </head>
   <body>
@@ -28,7 +28,10 @@
 			<a class="nav-link" href="/usersall">High Scores<span class="sr-only">(current)</span></a>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/login">Login Page</a>
+			<a class="nav-link" href="/login">Login</a>
+		  </li>
+      <li class="nav-item">
+			<a class="nav-link" href="/register">Register</a>
 		  </li>
 		</ul>
 		<div class="form-inline my-2 my-lg-0">
