--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,11 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="/usersall">High Scores</a>
 		  </li>
+      <li class="nav-item">
+			<a class="nav-link" href="/login">Login</a>
+		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/register">Registration Page</a>
+			<a class="nav-link" href="/register">Register</a>
 		  </li>
 		</ul>
 		<div class="form-inline my-2 my-lg-0">
