removed dashes from url

--- a/templates/userLogin.html
+++ b/templates/userLogin.html
@@ -60,7 +60,7 @@
                 <div class="card">
                     <div class="card-header">Login</div>
                     <div class="card-body">
-                        <form action="submit-form" method="post">
+                        <form action="submitform" method="post">
                             <div class="form-group row">
                                 <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address or Username</label>
                                 <div class="col-md-6">
