--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -22,6 +22,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
     <title>CSCI 3308 Three Headed Lizards</title>
+    <style> 
+        .redStar:after {
+        content: '*';
+        color: red;
+        font-size: 18px;
+       }
+    </style>
 </head>
 <body>
 
@@ -62,7 +69,7 @@
                     <div class="card-body">
                         <form action="submitform" method="post">
                             <div class="form-group row">
-                                <label for="email_address" class="col-md-4 col-form-label text-md-right">E-Mail Address</label>
+                                <label for="email_address" class="redStar col-md-4 col-form-label text-md-right">E-Mail Address</label>
                                 <div class="col-md-6">
                                     <input type="text" id="email_address" class="form-control" name="email" required autofocus>
                                 </div>
@@ -92,6 +99,14 @@
                                     <input type="password" id="password" class="form-control" name="password" required>
                                 </div>
                             </div>
+                            
+                             <div class="form-group row">
+                                <label for="confirm_password" class="col-md-4 col-form-label text-md-right">Confirm Password</label>
+                                <div class="col-md-6">
+                                    <input type="password" id="confirm_password" class="form-control" name="confirm_password" required>
+                                </div>
+                            </div>
+
 
                             <div class="form-group row">
                                 <div class="col-md-6 offset-md-4">
