--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -75,33 +75,33 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="first_name" class="col-md-4 col-form-label text-md-right">First Name</label>
+                                <label for="first_name" class="redStar col-md-4 col-form-label text-md-right">First Name</label>
                                 <div class="col-md-6">
                                     <input type="text" id="first_name" class="form-control" name="firstname" required autofocus>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="last_name" class="col-md-4 col-form-label text-md-right">Last Name</label>
+                                <label for="last_name" class="redStar col-md-4 col-form-label text-md-right">Last Name</label>
                                 <div class="col-md-6">
                                     <input type="text" id="last_name" class="form-control" name="lastname" required autofocus>
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="user_name" class="col-md-4 col-form-label text-md-right">Username</label>
+                                <label for="user_name" class="redStar col-md-4 col-form-label text-md-right">Username</label>
                                 <div class="col-md-6">
                                     <input type="text" id="user_name" class="form-control" name="username" required autofocus>
                                 </div>
                             </div>
 
                             <div class="form-group row">
-                                <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
+                                <label for="password" class="redStar col-md-4 col-form-label text-md-right">Password</label>
                                 <div class="col-md-6">
                                     <input type="password" id="password" class="form-control" name="password" required>
                                 </div>
                             </div>
                             
                              <div class="form-group row">
-                                <label for="confirm_password" class="col-md-4 col-form-label text-md-right">Confirm Password</label>
+                                <label for="confirm_password" class="redStar col-md-4 col-form-label text-md-right">Confirm Password</label>
                                 <div class="col-md-6">
                                     <input type="password" id="confirm_password" class="form-control" name="confirm_password" required>
                                 </div>
