--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -71,39 +71,39 @@
                             <div class="form-group row">
                                 <label for="email_address" class="redStar col-md-4 col-form-label text-md-right">E-Mail Address</label>
                                 <div class="col-md-6">
-                                    <input type="text" id="email_address" class="form-control" name="email" required autofocus>
+                                    <input type="text" id="email_address" class="form-control" name="email" placeholder="Enter email" required autofocus>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="first_name" class="redStar col-md-4 col-form-label text-md-right">First Name</label>
                                 <div class="col-md-6">
-                                    <input type="text" id="first_name" class="form-control" name="firstname" required autofocus>
+                                    <input type="text" id="first_name" class="form-control" name="firstname" placeholder="First Name" required autofocus>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="last_name" class="redStar col-md-4 col-form-label text-md-right">Last Name</label>
                                 <div class="col-md-6">
-                                    <input type="text" id="last_name" class="form-control" name="lastname" required autofocus>
+                                    <input type="text" id="last_name" class="form-control" name="lastname" placeholder="Last Name" required autofocus>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="user_name" class="redStar col-md-4 col-form-label text-md-right">Username</label>
                                 <div class="col-md-6">
-                                    <input type="text" id="user_name" class="form-control" name="username" required autofocus>
+                                    <input type="text" id="user_name" class="form-control" name="username" placeholder="Username" required autofocus>
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="password" class="redStar col-md-4 col-form-label text-md-right">Password</label>
                                 <div class="col-md-6">
-                                    <input type="password" id="password" class="form-control" name="password" required>
+                                    <input type="password" id="password" class="form-control" name="password" placeholder="Password" required>
                                 </div>
                             </div>
                             
                              <div class="form-group row">
                                 <label for="confirm_password" class="redStar col-md-4 col-form-label text-md-right">Confirm Password</label>
                                 <div class="col-md-6">
-                                    <input type="password" id="confirm_password" class="form-control" name="confirm_password" required>
+                                    <input type="password" id="confirm_password" class="form-control" name="confirm_password" placeholder="Confirm Password" required>
                                 </div>
                             </div>
 
