--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -65,7 +65,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header">Register</div>
+                    <div class="card-header row justify-content-center"><h2>Register<h2></div>
                     <div class="card-body">
                         <form action="submitform" method="post">
                             <div class="form-group row">
@@ -122,9 +122,7 @@
                                 <button type="submit" class="btn btn-primary">
                                     Register
                                 </button>
-                                <a href="#" class="btn btn-link">
-                                    Forgot Your Password?
-                                </a>
+                                
                             </div>
                     </div>
                     </form>
