--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -107,6 +107,15 @@
                                 </div>
                             </div>
 
+                            <div class="form-group row">
+                                <div  class="col-md-6 offset-md-4">
+                                    <div id="message_valid" class="valid">
+                                        
+                                            Password MUST contain at least <b>5 characters</b>
+                                        
+                                        </div>
+                                </div>
+                            </div>
 
                             <div class="form-group row">
                                 <div class="col-md-6 offset-md-4">
