--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -28,10 +28,18 @@
         color: red;
         font-size: 18px;
        }
+         .bg-img {
+		  min-width: 100%;
+		  height: 100%;
+		  padding: 0;
+          background-image: url("../static/img/backgroundsky.jpg");
+          background-size: cover;
+		  position: absolute;
+      }
     </style>
 </head>
 <body>
-
+    <div class="bg-img"></div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="home.html">
     <img class="rounded-circle" src="/img/drone.png" alt="" width="30" height="30">
