--- a/templates/userLogin.html
+++ b/templates/userLogin.html
@@ -31,6 +31,7 @@
           background-size: cover;
 		  position: absolute;
       }
+	    .position{padding-top: 10%;}
     </style>
 </head>
 <body>
@@ -66,7 +67,7 @@
 <main class="login-form">
     <div class="cotainer">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-6 position">
                 <div class="card">
                     <div class="card-header row justify-content-center"><h2>Login</h2></div>
                     <div class="card-body">
