--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -36,6 +36,7 @@
           background-size: cover;
 		  position: absolute;
       }
+	    .position{padding-top: 10%;}
     </style>
 </head>
 <body>
@@ -71,7 +72,7 @@
 <main class="login-form">
     <div class="cotainer">
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-6 position">
                 <div class="card">
                     <div class="card-header row justify-content-center"><h2>Register<h2></div>
                     <div class="card-body">
