--- a/templates/userLogin.html
+++ b/templates/userLogin.html
@@ -31,7 +31,18 @@
           background-size: cover;
 		  position: absolute;
       }
-	    .position{padding-top: 10%;}
+	    .position{padding-top: 5%;}
+	    .title{
+			 font-size:300%;
+			 color:#FFFFFF;
+			 margin: 30px auto;
+			 max-width: 1200px;
+			 background-color: #FFFFFF;
+			 background-color:rgba(0,0,0,0); 
+			 border:rgba(0,0,0,0);
+			 padding-top: 5%;
+			 
+		 }
     </style>
 </head>
 <body>
@@ -63,6 +74,11 @@
     </div>
     </div>
   </nav>
+	<div class="row justify-content-center">
+		<div class="card col-md-6 title">
+			<label for="title" class="row justify-content-center text-center">Fly your drone and having fun with your friends!</label>
+		</div>
+	</div>
 
 <main class="login-form">
     <div class="cotainer">
