--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -72,7 +72,7 @@
 <main class="login-form">
     <div class="cotainer">
         <div class="row justify-content-center">
-            <div class="col-md-6 position">
+            <div class="col-md-4 position">
                 <div class="card">
                     <div class="card-header row justify-content-center"><h2>Register<h2></div>
                     <div class="card-body">
@@ -127,7 +127,7 @@
                                 <div class="col-md-6 offset-md-4">
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox" name="remember"> Remember Me
+                                            <input type="checkbox" name="remember"> Signing up signifies that you have read and agree to the Terms of Service and our Privacy Policy.
                                         </label>
                                     </div>
                                 </div>
