--- a/templates/userRegister.html
+++ b/templates/userRegister.html
@@ -32,7 +32,7 @@
 		  min-width: 100%;
 		  height: 100%;
 		  padding: 0;
-          background-image: url("../static/img/backgroundsky.jpg");
+          background-image: url("/img/backgroundsky.jpg");
           background-size: cover;
 		  position: absolute;
       }
