--- a/templates/index.html
+++ b/templates/index.html
@@ -43,22 +43,26 @@
 		  <li class="nav-item">
 			<a class="nav-link" href="/usersall">High Scores</a>
 		  </li>
-      <li class="nav-item">
+      {% if loggedin==false %}
+      <li class="nav-item" id="login_index">
 			<a class="nav-link" href="/login">Login</a>
 		  </li>
 		  </li>
-      <li class="nav-item">
-			<a class="nav-link" href="/logout">Logout</a>
-		  </li>
-		  <li class="nav-item">
+		  <li class="nav-item" id="register_index">
 			<a class="nav-link" href="/register">Register</a>
 		  </li>
+      {% endif %}
+      {% if loggedin==true %}
+      <li class="nav-item" >
+      <a class="nav-link" id="loginPage_index" href={{currentUserPage}}>My Page</a>
+      </li>
+      {% endif %}
 		</ul>
-                {% if loggedin %}}
-		<div class="form-inline my-2 my-lg-0">
+    {% if loggedin==true %}
+		<div class="form-inline my-2 my-lg-0" id="logout_index">
 			<button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
 		</div>
-                {% endif %}
+    {% endif %}
 	  </div>
 	</nav>
 
@@ -105,6 +109,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
 </body>
 </html>
