--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -27,13 +27,26 @@
 		  <li class="nav-item">
                       <a class="nav-link" href="/usersall">High Scores</a>
 		  </li>
+      {% if loggedin==false %}
 		  <li class="nav-item active">
-                    <a class="nav-link" href="/login">Login Page<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/login">Login<span class="sr-only">(current)</span></a>
 		  </li>
+      <li class="nav-item">
+      <a class="nav-link" href="/register">Register</a>
+      </li>
+      {% endif %}
+      {% if loggedin==true %}
+      <li class="nav-item">
+      <a class="nav-link" href={{currentUserPage}}>My Page</a>
+      </li>
+      {% endif %}
+      </li>
 		</ul>
+    {% if loggedin==true %}
 		<div class="form-inline my-2 my-lg-0">
 			<button class="btn btn-outline-light my-2 my-sm-0" type="submit">Logout</button>
 		</div>
+    {% endif%}
 	  </div>
 	</nav>
 
